--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.kekshi.mywanandroid">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -11,8 +11,11 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+            android:theme="@style/AppTheme"
+            tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <!-- configChanges 手机横竖屏切换等三种情况，activity不重新创建 -->
+        <activity android:name=".ui.MainActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize">
 
         </activity>
         <activity android:name=".ui.SplashActivity">
