--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.2.71'
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
@@ -10,6 +11,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        classpath 'com.quinn.hunter:hunter-debug-plugin:0.9.5'
+        classpath 'com.quinn.hunter:hunter-transform:0.9.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
